# stx

SatdesFront-main/: README.md  package-lock.json  package.json
SatdesFront-main/src/: App.css
SatdesFront-main/src/components/: MapView.js
satdes-aplication-develop/: .env.example  README.md  requirements.txt
satdes-aplication-develop/src/: data_satdes.py  main.py
satdes-aplication-develop/src/app/: __init__.py  api_requests.py  data_ana.py  data_cepdec.py  data_incaper.py  data_inmet.py  data_processor.py  ema_processor.py
satdes-aplication-develop/src/config/: __init__.py  api_config.py  app_config.py  env_vars.py
satdes-aplication-develop/src/utils/: __init__.py  conn.py  data.py  json.py  time.py
satdes-backend-develop/: REP160827040008.json  composer.json
satdes-backend-develop/app/Http/: Kernel.php
satdes-backend-develop/app/Models/: ConfigStation.php  County.php  Flag.php  Institute.php  Manufacter.php  ReadedFile.php  Record.php  Sensor.php  State.php  Station.php  TypeSensor.php  TypeStation.php  TypeUnit.php  Variable.php
satdes-backend-develop/database/: cepdec_map.json  incaper_map.json  inmet_manual_map.json  inmet_map.json
satdes-backend-develop/routes/: api.php
satdes-produtos-main/: README.md
satdes-produtos-main/inmet/: functions.py  main.py  pyproject.toml  route.py
satdes-produtos-main/inmet/jupyter/: api_file.py  evapo.py  inmet.py  main.ipynb  prec.py  temp.py  umi.py  vento.py
satdes-produtos-main/inmet/templates/: evapo.html  prec.html  tempDT.html  tempHR.html  umiDT.html  umiHR.html  vento.html
(+45 files in other folders)
