[tool.poetry]
name = "inmet"
version = "0.1.0"
description = ""
authors = ["brunoms"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
fastapi = "^0.101.1"
sqlalchemy = "^2.0.20"
aiohttp = "^3.8.5"
requests = "^2.31.0"
matplotlib = "^3.7.2"
tdqm = "^0.0.1"
flask = "^2.3.3"
uvicorn = "^0.23.2"
streamlit = "^1.26.0"
pyeto = {git = "https://github.com/woodcrafty/PyETo.git", rev = "master"}
windrose = "^1.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
